--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=userservice
+spring.application.name=user-service
 server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/fitness_user_db?serverTimezone=UTC
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8083/eureka/
