--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -6,6 +6,12 @@ spring:
       uri: mongodb://localhost:27017
       database: fitnessactivity
 
+  rabbitmq:
+    host: localhost
+    port : 5672
+    username: guest
+    password: guest
+
 server:
   port: 8082
 
@@ -13,6 +19,16 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8083/eureka/
+
+
+
+rabbitmq:
+  exchange:
+    name: fitness.exchange
+  queue:
+    name : activity.queue
+  routing:
+    key : activity.tracking
 
 
 
